[package]
name = "wordle_clone"
description = "Wordle as a CLI app."
version = "0.1.3"
edition = "2021"
authors = ["Gabriel Kenneth L. Marinas <gabrielkennethmarinas@gmail.com>"]
keywords = ["cli", "game", "puzzle"]
repository = "https://github.com/marshblocker/wordle_clone"
license = "MIT"

[dependencies]
colored = "2"
rand = "0.8"
